[gd_scene load_steps=4 format=2]

[ext_resource path="res://actors/BaseProjectile.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 31.8877 )

[node name="BaseProjectile" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="LifeTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
